--- a/ios-header-panel.html
+++ b/ios-header-panel.html
@@ -5,10 +5,18 @@ This code may only be used under the MIT license.
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 
 <dom-module id="ios-header-panel">
   <template>
-    <content></content>
+    <content id="headerContent" select="ios-toolbar, .ios-header"></content>
+
+    <div id="mainPanel">
+      <div id="mainContainer" class$="[[_computeMainContainerClass(mode)]]">
+        <content id="mainContent" select="*"></content>
+      </div>
+      <div id="dropShadow"></div>
+    </div>
   </template>
 
   <script>
