--- a/ios-header-panel.html
+++ b/ios-header-panel.html
@@ -7,6 +7,105 @@ This code may only be used under the MIT license.
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 
+<!--
+`ios-header-panel` contains a header section and a content panel section.
+
+__Important:__ The `ios-header-panel` will not display if its parent does not have a height.
+
+Using layout classes, you can make the `ios-header-panel` fill the screen
+
+    <body class="fullbleed layout vertical">
+      <ios-header-panel class="flex">
+        <ios-toolbar>
+          <div>Hello World!</div>
+        </ios-toolbar>
+      </ios-header-panel>
+    </body>
+
+Special support is provided for scrolling modes when one uses a ios-toolbar or
+equivalent for the header section.
+
+Example:
+
+    <ios-header-panel>
+      <ios-toolbar>Header</ios-toolbar>
+      <div>Content goes here...</div>
+    </ios-header-panel>
+
+If you want to use other than `ios-toolbar` for the header, add `ios-header`
+class to that element.
+
+Example:
+
+    <ios-header-panel>
+      <div class="ios-header">Header</div>
+      <div>Content goes here...</div>
+    </ios-header-panel>
+
+To have the content fit to the main area, use the `fit` class.
+
+    <ios-header-panel>
+      <div class="ios-header">standard</div>
+      <div class="fit">content fits 100% below the header</div>
+    </ios-header-panel>
+
+Modes
+
+Controls header and scrolling behavior. Options are `standard`, `seamed`,
+`waterfall` and `scroll`. Default is `standard`.
+
+Mode | Description
+----------------|-------------
+`standard` | The header is a step above the panel. The header will consume the panel at the point of entry, preventing it from passing through to the opposite side.
+`seamed` | The header is presented as seamed with the panel.
+`waterfall` | Similar to standard mode, but header is initially presented as seamed with panel, but then separates to form the step.
+`scroll` | The header keeps its seam with the panel, and is pushed off screen.
+
+Example:
+
+    <ios-header-panel mode="waterfall">
+      <div class="ios-header">standard</div>
+      <div class="content fit">content fits 100% below the header</div>
+    </ios-header-panel>
+
+
+Styling header panel:
+
+To change the shadow that shows up underneath the header:
+
+    ios-header-panel {
+      --ios-header-panel-shadow: {
+          height: 6px;
+          bottom: -6px;
+          box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
+      };
+    }
+
+To change the panel container in different modes:
+
+    ios-header-panel {
+      --ios-header-panel-standard-container: {
+        border: 1px solid gray;
+      };
+
+      --ios-header-panel-seamed-container: {
+        border: 1px solid gray;
+      };
+
+      --ios-header-panel-waterfall-container: {
+        border: 1px solid gray;
+      };
+
+      --ios-header-panel-scroll-container: {
+        border: 1px solid gray;
+      };
+    }
+
+@group iOS Elements
+@element ios-header-panel
+@demo demo/index.html
+-->
+
 <dom-module id="ios-header-panel">
   <template>
     <style>
